--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,84 +1,42 @@
-@font-face {
-  font-family: 'IRANSans';
-  src: url('../font/IRANSansWeb-Light.ttf') format('truetype'),
-       url('../font/IRANSansWeb-Light.woff') format('woff');
+body{
+  background-color: rgba(138, 43, 226, 0.6);
 }
-
-html, body {
-  position: relative;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: IRANSans, sans-serif;
-  background: #fff;
-  color: #333;
-  direction: rtl;
-}
-
-.logo img {
-  height: 40px;
-}
-
-.search-bar {
-  flex: 1;
-}
-
-.search-bar input {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.nav-menu ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.nav-menu ul li {
-  position: relative;
-}
-
-.nav-menu ul li a {
+a{
   text-decoration: none;
-  color: #333;
+  font-size: 20px;
 }
 
-.nav-menu .dropdown {
-  display: none;
+.nav nav{
+  margin: auto;
+  width: 95%;
   position: absolute;
-  background: white;
-  padding: 10px;
-  border: 1px solid #ccc;
+  top: 0;
+  background-color: rgb(138, 43, 226);
+  border-radius: 10px;
 }
-
-.nav-menu li:hover .dropdown {
-  display: block;
-}
-
-.user-actions a {
-  margin: 0 10px;
-  font-size: 24px;
-  color: #333;
-}
-
-.swiper.hero-carousel {
-  height: 400px;
-}
-
-.swiper.hero-carousel .swiper-slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.category-grid {
+.nav nav ul {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;  
   justify-content: center;
-  gap: 20px;
-  margin: 20px auto;
+  align-items: center;
 }
 
-.category-item 
+.nav nav ul li{
+  margin: 20px;
+  list-style: none;
+}
+
+.nav nav ul li:hover{
+  opacity: 0.5;
+}
+
+.nav nav img {
+  position: absolute;
+  top: 70px;
+  right: 20px;
+  border-radius: 50%;
+  width: 50px;
+  transition: all ease-in-out;
+  transform: rotateX(100);
+}
+
