--- a/public/css/general.css
+++ b/public/css/general.css
@@ -188,7 +188,7 @@ main .par h1 {
   margin-bottom: 15px;
 }
 
-.product-image svg {
+.product-image img {
   width: 100%;
   height: 100%;
   max-width: 200px;
